bootstrap css architecture

--- a/vanityfayrehairdesign.Theme.csproj
+++ b/vanityfayrehairdesign.Theme.csproj
@@ -75,15 +75,10 @@
     <Content Include="Scripts\jquery-1.11.1.min.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\Web.config" />
-    <Content Include="Styles\accordian.min.css" />
-    <Content Include="Styles\bootstrap.css" />
-    <Content Include="Styles\bootstrap.min.css" />
+    <Content Include="Styles\Bootstrap\bootstrap.min.css" />
     <Content Include="Styles\font-awesome-ie7.min.css" />
     <Content Include="Styles\font-awesome.min.css" />
-    <Content Include="Styles\site.css" />
-    <Content Include="Styles\site.min.css" />
-    <Content Include="Styles\variables.css" />
-    <Content Include="Styles\variables.min.css" />
+    <Content Include="Styles\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Styles\Web.config" />
     <Content Include="Web.config" />
     <Content Include="Content\Web.config" />
@@ -104,84 +99,61 @@
   <ItemGroup>
     <Content Include="Styles\.csscomb.json" />
     <Content Include="Styles\.csslintrc" />
-    <Content Include="Styles\accordian.less" />
-    <Content Include="Styles\alerts.less" />
-    <Content Include="Styles\badges.less" />
-    <Content Include="Styles\bootstrap.css.map" />
-    <Content Include="Styles\bootstrap.less" />
-    <Content Include="Styles\breadcrumbs.less" />
-    <Content Include="Styles\button-groups.less" />
-    <Content Include="Styles\buttons.less" />
-    <Content Include="Styles\carousel.less" />
-    <Content Include="Styles\close.less" />
-    <Content Include="Styles\code.less" />
-    <Content Include="Styles\component-animations.less" />
-    <Content Include="Styles\dropdowns.less" />
-    <Content Include="Styles\forms.less" />
-    <Content Include="Styles\glyphicons.less" />
-    <Content Include="Styles\grid.less" />
-    <Content Include="Styles\input-groups.less" />
-    <Content Include="Styles\jumbotron.less" />
-    <Content Include="Styles\labels.less" />
-    <Content Include="Styles\list-group.less" />
-    <Content Include="Styles\media.less" />
-    <Content Include="Styles\mixins.less" />
-    <Content Include="Styles\mixins\alerts.less" />
-    <Content Include="Styles\mixins\background-variant.less" />
-    <Content Include="Styles\mixins\border-radius.less" />
-    <Content Include="Styles\mixins\buttons.less" />
-    <Content Include="Styles\mixins\center-block.less" />
-    <Content Include="Styles\mixins\clearfix.less" />
-    <Content Include="Styles\mixins\forms.less" />
-    <Content Include="Styles\mixins\gradients.less" />
-    <Content Include="Styles\mixins\grid-framework.less" />
-    <Content Include="Styles\mixins\grid.less" />
-    <Content Include="Styles\mixins\hide-text.less" />
-    <Content Include="Styles\mixins\image.less" />
-    <Content Include="Styles\mixins\labels.less" />
-    <Content Include="Styles\mixins\list-group.less" />
-    <Content Include="Styles\mixins\nav-divider.less" />
-    <Content Include="Styles\mixins\nav-vertical-align.less" />
-    <Content Include="Styles\mixins\opacity.less" />
-    <Content Include="Styles\mixins\pagination.less" />
-    <Content Include="Styles\mixins\panels.less" />
-    <Content Include="Styles\mixins\progress-bar.less" />
-    <Content Include="Styles\mixins\reset-filter.less" />
-    <Content Include="Styles\mixins\resize.less" />
-    <Content Include="Styles\mixins\responsive-visibility.less" />
-    <Content Include="Styles\mixins\size.less" />
-    <Content Include="Styles\mixins\tab-focus.less" />
-    <Content Include="Styles\mixins\table-row.less" />
-    <Content Include="Styles\mixins\text-emphasis.less" />
-    <Content Include="Styles\mixins\text-overflow.less" />
-    <Content Include="Styles\mixins\vendor-prefixes.less" />
-    <Content Include="Styles\modals.less" />
-    <Content Include="Styles\navbar.less" />
-    <Content Include="Styles\navs.less" />
-    <Content Include="Styles\normalize.less" />
-    <Content Include="Styles\pager.less" />
-    <Content Include="Styles\pagination.less" />
-    <Content Include="Styles\panels.less" />
-    <Content Include="Styles\popovers.less" />
-    <Content Include="Styles\print.less" />
-    <Content Include="Styles\progress-bars.less" />
-    <Content Include="Styles\responsive-embed.less" />
-    <Content Include="Styles\responsive-utilities.less" />
-    <Content Include="Styles\scaffolding.less" />
-    <Content Include="Styles\site.css.map" />
-    <Content Include="Styles\site.less" />
-    <Content Include="Styles\tables.less" />
-    <Content Include="Styles\theme.less" />
-    <Content Include="Styles\thumbnails.less" />
-    <Content Include="Styles\tooltip.less" />
-    <Content Include="Styles\type.less" />
-    <Content Include="Styles\utilities.less" />
-    <Content Include="Styles\variables.less" />
-    <Content Include="Styles\wells.less" />
+    <Content Include="Styles\Bootstrap\less\alerts.less" />
+    <Content Include="Styles\Bootstrap\less\badges.less" />
+    <Content Include="Styles\Bootstrap\less\bootstrap.less" />
+    <Content Include="Styles\Bootstrap\less\breadcrumbs.less" />
+    <Content Include="Styles\Bootstrap\less\button-groups.less" />
+    <Content Include="Styles\Bootstrap\less\buttons.less" />
+    <Content Include="Styles\Bootstrap\less\carousel.less" />
+    <Content Include="Styles\Bootstrap\less\close.less" />
+    <Content Include="Styles\Bootstrap\less\code.less" />
+    <Content Include="Styles\Bootstrap\less\component-animations.less" />
+    <Content Include="Styles\Bootstrap\less\dropdowns.less" />
+    <Content Include="Styles\Bootstrap\less\forms.less" />
+    <Content Include="Styles\Bootstrap\less\glyphicons.less" />
+    <Content Include="Styles\Bootstrap\less\grid.less" />
+    <Content Include="Styles\Bootstrap\less\input-groups.less" />
+    <Content Include="Styles\Bootstrap\less\jumbotron.less" />
+    <Content Include="Styles\Bootstrap\less\labels.less" />
+    <Content Include="Styles\Bootstrap\less\list-group.less" />
+    <Content Include="Styles\Bootstrap\less\media.less" />
+    <Content Include="Styles\Bootstrap\less\mixins.less" />
+    <Content Include="Styles\Bootstrap\less\modals.less" />
+    <Content Include="Styles\Bootstrap\less\navbar.less" />
+    <Content Include="Styles\Bootstrap\less\navs.less" />
+    <Content Include="Styles\Bootstrap\less\normalize.less" />
+    <Content Include="Styles\Bootstrap\less\pager.less" />
+    <Content Include="Styles\Bootstrap\less\pagination.less" />
+    <Content Include="Styles\Bootstrap\less\panels.less" />
+    <Content Include="Styles\Bootstrap\less\popovers.less" />
+    <Content Include="Styles\Bootstrap\less\print.less" />
+    <Content Include="Styles\Bootstrap\less\progress-bars.less" />
+    <Content Include="Styles\Bootstrap\less\responsive-embed.less" />
+    <Content Include="Styles\Bootstrap\less\responsive-utilities.less" />
+    <Content Include="Styles\Bootstrap\less\scaffolding.less" />
+    <Content Include="Styles\Bootstrap\less\tables.less" />
+    <Content Include="Styles\Bootstrap\less\theme.less" />
+    <Content Include="Styles\Bootstrap\less\thumbnails.less" />
+    <Content Include="Styles\Bootstrap\less\tooltip.less" />
+    <Content Include="Styles\Bootstrap\less\type.less" />
+    <Content Include="Styles\Bootstrap\less\utilities.less" />
+    <Content Include="Styles\Bootstrap\less\variables.less" />
+    <Content Include="Styles\Bootstrap\less\wells.less" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Document.cshtml" />
     <Content Include="Views\layout.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Site\less\_TheThemeMachine-Bootstrap-Mixins.less" />
+    <Content Include="Styles\Site\less\_TheThemeMachine-Bootstrap-Navigation.less" />
+    <Content Include="Styles\Site\less\_TheThemeMachine-Bootstrap-Scaffolding.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Styles\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Styles\fonts\glyphicons-halflings-regular.woff" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
