--- a/vanityfayrehairdesign.Theme.csproj
+++ b/vanityfayrehairdesign.Theme.csproj
@@ -67,38 +67,23 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Scripts\carosel.js" />
-    <Content Include="Scripts\html5shiv.js" />
-    <Content Include="Scripts\jquery-1.11.0.js" />
-    <Content Include="Scripts\jquery-1.11.1.min.js" />
-    <Content Include="Scripts\respond.min.js" />
+    <Content Include="Content\bg.png" />
+    <Content Include="Scripts\Bootstrap\affix.js" />
+    <Content Include="Scripts\Bootstrap\alert.js" />
+    <Content Include="Scripts\Bootstrap\bootstrap.min.js" />
+    <Content Include="Scripts\Bootstrap\button.js" />
+    <Content Include="Scripts\Bootstrap\carousel.js" />
+    <Content Include="Scripts\Bootstrap\collapse.js" />
+    <Content Include="Scripts\Bootstrap\dropdown.js" />
+    <Content Include="Scripts\Bootstrap\modal.js" />
+    <Content Include="Scripts\Bootstrap\popover.js" />
+    <Content Include="Scripts\Bootstrap\scrollspy.js" />
+    <Content Include="Scripts\Bootstrap\tab.js" />
+    <Content Include="Scripts\Bootstrap\tooltip.js" />
+    <Content Include="Scripts\Bootstrap\transition.js" />
+    <Content Include="Scripts\theme.js" />
     <Content Include="Scripts\Web.config" />
     <Content Include="Styles\Bootstrap\bootstrap.min.css" />
-    <Content Include="Styles\font-awesome-ie7.min.css" />
-    <Content Include="Styles\font-awesome.min.css" />
-    <Content Include="Styles\fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="Styles\Web.config" />
-    <Content Include="Web.config" />
-    <Content Include="Content\Web.config" />
-    <Content Include="Theme.txt" />
-    <Content Include="Theme.png" />
-    <Content Include="Placement.info" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Orchard.Core">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\bin\Orchard.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Orchard.Framework">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\bin\Orchard.Framework.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Styles\.csscomb.json" />
-    <Content Include="Styles\.csslintrc" />
     <Content Include="Styles\Bootstrap\less\alerts.less" />
     <Content Include="Styles\Bootstrap\less\badges.less" />
     <Content Include="Styles\Bootstrap\less\bootstrap.less" />
@@ -140,20 +125,41 @@
     <Content Include="Styles\Bootstrap\less\utilities.less" />
     <Content Include="Styles\Bootstrap\less\variables.less" />
     <Content Include="Styles\Bootstrap\less\wells.less" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Document.cshtml" />
-    <Content Include="Views\layout.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
+    <Content Include="Styles\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Styles\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Styles\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Styles\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Styles\Site.css" />
+    <Content Include="Styles\Site.less" />
+    <Content Include="Styles\Site.min.css" />
     <Content Include="Styles\Site\less\_TheThemeMachine-Bootstrap-Mixins.less" />
     <Content Include="Styles\Site\less\_TheThemeMachine-Bootstrap-Navigation.less" />
     <Content Include="Styles\Site\less\_TheThemeMachine-Bootstrap-Scaffolding.less" />
+    <Content Include="Styles\Theme.css" />
+    <Content Include="Styles\Theme.less" />
+    <Content Include="Styles\Theme.min.css" />
+    <Content Include="Styles\Web.config" />
+    <Content Include="Web.config" />
+    <Content Include="Content\Web.config" />
+    <Content Include="Theme.txt" />
+    <Content Include="Theme.png" />
+    <Content Include="Placement.info" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Styles\fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="Styles\fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="Styles\fonts\glyphicons-halflings-regular.woff" />
+    <Reference Include="Orchard.Core">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\bin\Orchard.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Orchard.Framework">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\bin\Orchard.Framework.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\layout.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="ResourceManifest.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
