--- a/vanityfayrehairdesign.Theme.csproj
+++ b/vanityfayrehairdesign.Theme.csproj
@@ -162,6 +162,11 @@
   <ItemGroup>
     <Content Include="Views\Widget-Name-AccordianMenu.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Theme.css.map">
+      <DependentUpon>Theme.css</DependentUpon>
+    </Content>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
